##Text encoding: utf-8

2008-10-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment-atom.cc: ensure symbol geometry is always
	evaluated.
	* libs/gcp/molecule.cc: fix contextual menu issues.
	* libs/gcp/view.cc: enable selection of an atom even without a
	visible item.
	* libs/gcu/atom.cc: initalize Z a to -1. to avoid confusion with
	pseudo-atoms.
	* plugins/paint/bonds/bondtool.cc: enable merging with atoms even
	without a visible item.
	* plugins/paint/cycles/cycletool.cc: ditto.

2008-10-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Doxyfile.in: add an image path.
	* libs/gcp/fontsel.h: add a screenshot to the documentation.
	* libs/gcp/theme.h: API documentation work (done for 0.10).

2008-10-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: update position and length when the
	attached object changes.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/settings.h: API documentation work.
	* libs/gcp/theme.h: ditto.
	* libs/gcp/tool.h: ditto.

2008-10-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: removed unuseful SetSelected method.
	* libs/gcp/molecule.h: API documentation work.
	* libs/gcp/preferences.cc: made most pethos private and replace them
	by a private friend class.
	* libs/gcp/preferences.h: ditto.
	* libs/gcp/reaction-prop.h: API documentation work.
	* libs/gcp/settings.h: ditto.
	* libs/gcp/stringdlg.h: ditto.
	* libs/gcp/text.h: ditto.
	* libs/gcp/tool.cc: ditto.
	* libs/gcp/tool.h: ditto.
	* libs/gcp/view.h: ditto.
	* libs/gcu/atom.h: ditto.
	* libs/gcu/object.h: ditto.

2008-09-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.93).

2008-09-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/crystal/C/gcrystal.xml: fixed validation.

2008-09-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/calc/C/gchemcalc.xml: added missing tags.

2008-09-28  Jean Bréfort  <jean.brefort@normalesup.org>